rust/pattern_c.rs

#[test]
fn bindgen_test_layout_fiftyoneDegrees_node_index_value_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_node_index_value_t>(),
        4usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_node_index_value_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_node_index_value_t>(),
        4usize,
        concat!(
            "Alignment of ",
            stringify!(fiftyoneDegrees_node_index_value_t)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_node_index_value_t>())).characters as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_node_index_value_t),
            "::",
            stringify!(characters)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_node_index_value_t>())).integer as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_node_index_value_t),
            "::",
            stringify!(integer)
        )
    );
}
pub type fiftyoneDegreesNodeIndexValue = fiftyoneDegrees_node_index_value_t;
#[repr(C, packed)]
#[derive(Copy, Clone)]
pub struct fiftyoneDegrees_node_index_t {
    pub relatedNodeOffset: i32,
    pub value: fiftyoneDegrees_node_index_t__bindgen_ty_1,
}
#[repr(C, packed)]
#[derive(Copy, Clone)]
pub union fiftyoneDegrees_node_index_t__bindgen_ty_1 {
    pub characters: [byte; 4usize],
    pub integer: i32,
    _bindgen_union_align: [u8; 4usize],
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_node_index_t__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_node_index_t__bindgen_ty_1>(),
        4usize,
        concat!(
            "Size of: ",
            stringify!(fiftyoneDegrees_node_index_t__bindgen_ty_1)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_node_index_t__bindgen_ty_1>(),
        1usize,
        concat!(
            "Alignment of ",
            stringify!(fiftyoneDegrees_node_index_t__bindgen_ty_1)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_node_index_t__bindgen_ty_1>())).characters
                as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_node_index_t__bindgen_ty_1),
            "::",
            stringify!(characters)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_node_index_t__bindgen_ty_1>())).integer
                as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_node_index_t__bindgen_ty_1),
            "::",
            stringify!(integer)
        )
    );
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_node_index_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_node_index_t>(),
        8usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_node_index_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_node_index_t>(),
        1usize,
        concat!("Alignment of ", stringify!(fiftyoneDegrees_node_index_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_node_index_t>())).relatedNodeOffset as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_node_index_t),
            "::",
            stringify!(relatedNodeOffset)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_node_index_t>())).value as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_node_index_t),
            "::",
            stringify!(value)
        )
    );
}
pub type fiftyoneDegreesNodeIndex = fiftyoneDegrees_node_index_t;
#[repr(C, packed(2))]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_string_t {
    pub value: *mut byte,
    pub length: i16,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_string_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_string_t>(),
        10usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_string_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_string_t>(),
        2usize,
        concat!("Alignment of ", stringify!(fiftyoneDegrees_string_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fiftyoneDegrees_string_t>())).value as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_string_t),
            "::",
            stringify!(value)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fiftyoneDegrees_string_t>())).length as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_string_t),
            "::",
            stringify!(length)
        )
    );
}
pub type fiftyoneDegreesString = fiftyoneDegrees_string_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_strings_t {
    pub firstString: *const fiftyoneDegreesString,
    pub count: i32,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_strings_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_strings_t>(),
        16usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_strings_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_strings_t>(),
        8usize,
        concat!("Alignment of ", stringify!(fiftyoneDegrees_strings_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_strings_t>())).firstString as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_strings_t),
            "::",
            stringify!(firstString)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fiftyoneDegrees_strings_t>())).count as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_strings_t),
            "::",
            stringify!(count)
        )
    );
}
pub type fiftyoneDegreesStrings = fiftyoneDegrees_strings_t;
#[repr(C, packed(2))]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_node_t {
    pub position: i16,
    pub nextCharacterPosition: i16,
    pub parentOffset: i32,
    pub characterStringOffset: i32,
    pub childrenCount: i16,
    pub numericChildrenCount: i16,
    pub signatureCount: u16,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_node_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_node_t>(),
        18usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_node_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_node_t>(),
        2usize,
        concat!("Alignment of ", stringify!(fiftyoneDegrees_node_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fiftyoneDegrees_node_t>())).position as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_node_t),
            "::",
            stringify!(position)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_node_t>())).nextCharacterPosition as *const _
                as usize
        },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_node_t),
            "::",
            stringify!(nextCharacterPosition)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_node_t>())).parentOffset as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_node_t),
            "::",
            stringify!(parentOffset)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_node_t>())).characterStringOffset as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_node_t),
            "::",
            stringify!(characterStringOffset)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_node_t>())).childrenCount as *const _ as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_node_t),
            "::",
            stringify!(childrenCount)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_node_t>())).numericChildrenCount as *const _
                as usize
        },
        14usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_node_t),
            "::",
            stringify!(numericChildrenCount)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_node_t>())).signatureCount as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_node_t),
            "::",
            stringify!(signatureCount)
        )
    );
}
pub type fiftyoneDegreesNode = fiftyoneDegrees_node_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_profile_offset_t {
    pub profileId: i32,
    pub offset: i32,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_profile_offset_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_profile_offset_t>(),
        8usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_profile_offset_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_profile_offset_t>(),
        4usize,
        concat!(
            "Alignment of ",
            stringify!(fiftyoneDegrees_profile_offset_t)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_profile_offset_t>())).profileId as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_profile_offset_t),
            "::",
            stringify!(profileId)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_profile_offset_t>())).offset as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_profile_offset_t),
            "::",
            stringify!(offset)
        )
    );
}
pub type fiftyoneDegreesProfileOffset = fiftyoneDegrees_profile_offset_t;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct property_t {
    pub componentIndex: byte,
    pub displayOrder: byte,
    pub isMandatory: byte,
    pub isList: byte,
    pub showValues: byte,
    pub isObsolete: byte,
    pub show: byte,
    pub valueType: byte,
    pub defaultValueIndex: i32,
    pub nameOffset: i32,
    pub descriptionOffset: i32,
    pub categoryOffset: i32,
    pub urlOffset: i32,
    pub firstValueIndex: i32,
    pub lastValueIndex: i32,
    pub mapCount: i32,
    pub firstMapIndex: i32,
}
